--- a/Generator/src/main/resources/db.properties
+++ b/Generator/src/main/resources/db.properties
@@ -9,3 +9,8 @@ jdbc.table.items = items
 jdbc.table.orders = orders
 jdbc.table.orderdetail = orderdetail
 jdbc.table.user = user
+
+#生成domain的包路径
+package.domain=com.lcz.ssm.bean
+#生成mapper的包路径
+package.mapper=com.lcz.ssm.mapper
