--- a/Generator/src/main/resources/db.properties
+++ b/Generator/src/main/resources/db.properties
@@ -1,3 +1,4 @@
+#mysqlÇý¶¯°üÎ»ÖÃ
 jdbc.driverLocation=D:\\myworkspace\\ideaspacework\\mysql-connector-java-5.1.7-bin.jar
 jdbc.driver=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://localhost:3306/hmdb?useUnicode=true&characterEncoding=utf8&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
