mybatis 逆向工程优化配置文件

--- a/Generator/src/main/resources/db.properties
+++ b/Generator/src/main/resources/db.properties
@@ -1,15 +1,16 @@
-#mysql驱动包位置
-jdbc.driverLocation=D:\\myworkspace\\ideaspacework\\mysql-connector-java-5.1.7-bin.jar
+#mysql驱动包位置,可放resources目录下或其它目录路径
+#jdbc.driverLocation=D:\\myworkspace\\ideaspacework\\mysql-connector-java-5.1.7-bin.jar
+jdbc.driverLocation=.\\src\\main\\resources\\mysql-connector-java-5.1.7-bin.jar
 jdbc.driver=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://localhost:3306/hmdb?useUnicode=true&characterEncoding=utf8&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 jdbc.username=root
 jdbc.password=
 
 #数据库中要生成的表
-jdbc.table.items = items
-jdbc.table.orders = orders
-jdbc.table.orderdetail = orderdetail
-jdbc.table.user = user
+jdbc.table1 = items
+jdbc.table2 = orders
+jdbc.table3 = orderdetail
+jdbc.table4 = user
 
 #生成domain的包路径
 package.domain=com.lcz.ssm.bean
